@@ -1,3 +1,8 @@
+Thu Jun 20 16:57:19 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* benchmark/bm_app_aobench.rb: use attr_accessor/reader instead of
+	  defining methods.
+
 Thu Jun 20 16:46:46 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* benchmark/bm_app_aobench.rb: added.
